LUTECE-1562 : Correction of style of some core classes.
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/core@47174 bab10101-e421-0410-a517-8ce0973de3ef